feat: add nav__sublist--nested

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                     <li class="nav__item nav__item--child">
                                         <a
                                             href="index.html"
-                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-7"
+                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-3"
                                             >Разработка сайтов
                                             <svg
                                                 class="nav__icon--open"
@@ -357,7 +357,6 @@
                                                     >Тех.задания и прототипы</a
                                                 >
                                             </li>
-
                                             <li
                                                 class="nav__item nav__item--child"
                                             >
@@ -412,12 +411,21 @@
                                                     >Рестораны</a
                                                 >
                                             </li>
+                                            <!-- <li
+                                                class="nav__item nav__item--child"
+                                            > -->
+                                            <img
+                                                src="/assets/images/list-development.png"
+                                                alt="Декоративная картинка"
+                                                class="nested-img"
+                                            />
+                                            <!-- </li> -->
                                         </ul>
                                     </li>
                                     <li class="nav__item nav__item--child">
                                         <a
                                             href="index.html"
-                                            class="nav__link--child link-action hover-accent d-flex-between-center"
+                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-3"
                                             >Продвижение сайтов
                                             <svg
                                                 class="nav__icon--open"
@@ -433,7 +441,7 @@
                                     <li class="nav__item nav__item--child">
                                         <a
                                             href="index.html"
-                                            class="nav__link--child link-action hover-accent d-flex-between-center"
+                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-3"
                                             >Техническая поддежка
                                             <svg
                                                 class="nav__icon--open"
