refactor: dropdown menu

--- a/index.html
+++ b/index.html
@@ -262,8 +262,6 @@
             </div>
             <div class="nav-bar mp__nav-panel mp__nav-panel_main">
                 <div class="container">
-                    <!-- <div class="row"> -->
-                    <!-- <div class="col-12"> -->
                     <nav class="nav">
                         <ul class="nav__list d-flex nav__list--horizontal">
                             <!-- Первый уровень -->
@@ -274,19 +272,28 @@
                                     >Услуги и&nbsp;цены</a
                                 >
                                 <!-- Второй уровень -->
-                                <ul class="nav__list nav__sublist d-flex">
+                                <ul class="nav__list nav__sublist">
                                     <li class="nav__item nav__item--child">
                                         <a
                                             href="index.html"
                                             class="nav__link--child link-action hover-accent d-flex-between-center gap-3"
                                             >Разработка сайтов
                                             <svg
-                                                class="nav__icon--open"
+                                                class="nav__icon--open icon-open"
                                                 width="20"
                                                 height="20"
                                             >
                                                 <use
                                                     xlink:href="#icon-cross"
+                                                ></use>
+                                            </svg>
+                                            <svg
+                                                class="nav__icon--open icon-close"
+                                                width="20"
+                                                height="20"
+                                            >
+                                                <use
+                                                    xlink:href="#icon-nose"
                                                 ></use>
                                             </svg>
                                         </a>
@@ -428,12 +435,21 @@
                                             class="nav__link--child link-action hover-accent d-flex-between-center gap-3"
                                             >Продвижение сайтов
                                             <svg
-                                                class="nav__icon--open"
+                                                class="nav__icon--open icon-open"
                                                 width="20"
                                                 height="20"
                                             >
                                                 <use
                                                     xlink:href="#icon-cross"
+                                                ></use>
+                                            </svg>
+                                            <svg
+                                                class="nav__icon--open icon-close"
+                                                width="20"
+                                                height="20"
+                                            >
+                                                <use
+                                                    xlink:href="#icon-nose"
                                                 ></use>
                                             </svg>
                                         </a>
@@ -444,12 +460,21 @@
                                             class="nav__link--child link-action hover-accent d-flex-between-center gap-3"
                                             >Техническая поддежка
                                             <svg
-                                                class="nav__icon--open"
+                                                class="nav__icon--open icon-open"
                                                 width="20"
                                                 height="20"
                                             >
                                                 <use
                                                     xlink:href="#icon-cross"
+                                                ></use>
+                                            </svg>
+                                            <svg
+                                                class="nav__icon--open icon-close"
+                                                width="20"
+                                                height="20"
+                                            >
+                                                <use
+                                                    xlink:href="#icon-nose"
                                                 ></use>
                                             </svg>
                                         </a>
@@ -523,8 +548,6 @@
                             </li>
                         </ul>
                     </nav>
-                    <!-- </div> -->
-                    <!-- </div> -->
                 </div>
             </div>
         </header>
@@ -764,6 +787,7 @@
         <!-- Footer End -->
         <script src="template/lib/swiper/swiper-bundle.min.js"></script>
         <script src="template/js/Mobile-panel.js"></script>
+        <script src="template/js/ToggleSubmenu.js"></script>
         <script src="template/js/main.js"></script>
     </body>
 </html>
