feat: add updateDynamicProperty function & dropdown menu styles

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                                     <li class="nav__item nav__item--child">
                                         <a
                                             href="index.html"
-                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-3"
+                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
                                             >Разработка сайтов
                                             <svg
                                                 class="nav__icon--open icon-open"
@@ -299,7 +299,7 @@
                                         </a>
                                         <!-- третий уровень -->
                                         <ul
-                                            class="nav__list nav__sublist--nested d-flex"
+                                            class="nav__list nav__sublist--nested"
                                         >
                                             <li
                                                 class="nav__item nav__item--child"
@@ -432,7 +432,7 @@
                                     <li class="nav__item nav__item--child">
                                         <a
                                             href="index.html"
-                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-3"
+                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
                                             >Продвижение сайтов
                                             <svg
                                                 class="nav__icon--open icon-open"
@@ -457,7 +457,7 @@
                                     <li class="nav__item nav__item--child">
                                         <a
                                             href="index.html"
-                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-3"
+                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
                                             >Техническая поддежка
                                             <svg
                                                 class="nav__icon--open icon-open"
