feat: add level 2 dropdown list

--- a/index.html
+++ b/index.html
@@ -538,6 +538,46 @@
                                     class="nav__link link-action text-uppercase hover-accent"
                                     >О&nbsp;компании</a
                                 >
+                                <!-- Второй уровень -->
+                                <ul
+                                    class="nav__list nav__sublist level-two-only"
+                                >
+                                    <li class="nav__item nav__item--child">
+                                        <a
+                                            href="index.html"
+                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
+                                            >Партнеры
+                                        </a>
+                                    </li>
+                                    <li class="nav__item nav__item--child">
+                                        <a
+                                            href="index.html"
+                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
+                                            >Клиенты
+                                        </a>
+                                    </li>
+                                    <li class="nav__item nav__item--child">
+                                        <a
+                                            href="index.html"
+                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
+                                            >Награды
+                                        </a>
+                                    </li>
+                                    <li class="nav__item nav__item--child">
+                                        <a
+                                            href="index.html"
+                                            class="nav__link--child link-action hover-accent"
+                                            >Способы оплаты</a
+                                        >
+                                    </li>
+                                    <li class="nav__item nav__item--child">
+                                        <a
+                                            href="index.html"
+                                            class="nav__link--child link-action hover-accent"
+                                            >Реквизиты</a
+                                        >
+                                    </li>
+                                </ul>
                             </li>
                             <li class="nav__item">
                                 <a
