style: only-level-two correct

--- a/index.html
+++ b/index.html
@@ -524,6 +524,32 @@
                                     class="nav__link link-action text-uppercase hover-accent"
                                     >Портфолио и&nbsp;отзывы</a
                                 >
+                                <!-- Второй уровень -->
+                                <ul
+                                    class="nav__list nav__sublist only-level-two"
+                                >
+                                    <li class="nav__item nav__item--child">
+                                        <a
+                                            href="index.html"
+                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
+                                            >Портфолио
+                                        </a>
+                                    </li>
+                                    <li class="nav__item nav__item--child">
+                                        <a
+                                            href="index.html"
+                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
+                                            >Реклама
+                                        </a>
+                                    </li>
+                                    <li class="nav__item nav__item--child">
+                                        <a
+                                            href="index.html"
+                                            class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
+                                            >Отзывы
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="nav__item nav__item--parent">
                                 <a
@@ -540,7 +566,7 @@
                                 >
                                 <!-- Второй уровень -->
                                 <ul
-                                    class="nav__list nav__sublist level-two-only"
+                                    class="nav__list nav__sublist only-level-two"
                                 >
                                     <li class="nav__item nav__item--child">
                                         <a
