feat: add toggleSubmenu

--- a/index.html
+++ b/index.html
@@ -271,8 +271,9 @@
                                     class="nav__link link-action text-uppercase hover-accent"
                                     >Услуги и&nbsp;цены</a
                                 >
-                                <!-- Второй уровень -->
+
                                 <ul class="nav__list nav__sublist">
+                                    <!-- Второй уровень -->
                                     <li class="nav__item nav__item--child">
                                         <a
                                             href="index.html"
@@ -288,7 +289,7 @@
                                                 ></use>
                                             </svg>
                                             <svg
-                                                class="nav__icon--open icon-close"
+                                                class="nav__icon--open icon-close hidden"
                                                 width="20"
                                                 height="20"
                                             >
@@ -418,17 +419,14 @@
                                                     >Рестораны</a
                                                 >
                                             </li>
-                                            <!-- <li
-                                                class="nav__item nav__item--child"
-                                            > -->
                                             <img
                                                 src="/assets/images/list-development.png"
                                                 alt="Декоративная картинка"
                                                 class="nested-img"
                                             />
-                                            <!-- </li> -->
                                         </ul>
                                     </li>
+                                    <!-- Второй уровень -->
                                     <li class="nav__item nav__item--child">
                                         <a
                                             href="index.html"
@@ -444,7 +442,7 @@
                                                 ></use>
                                             </svg>
                                             <svg
-                                                class="nav__icon--open icon-close"
+                                                class="nav__icon--open icon-close hidden"
                                                 width="20"
                                                 height="20"
                                             >
@@ -453,12 +451,59 @@
                                                 ></use>
                                             </svg>
                                         </a>
+                                        <!-- третий уровень -->
+                                        <ul
+                                            class="nav__list nav__sublist--nested nested-promotion"
+                                        >
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >SEO продвижение</a
+                                                >
+                                            </li>
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >Контекстная реклама</a
+                                                >
+                                            </li>
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >Догоняющая реклама</a
+                                                >
+                                            </li>
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >Продвижение в соц сетях</a
+                                                >
+                                            </li>
+                                            <img
+                                                src="/assets/images/list-promotion.png"
+                                                alt="Декоративная картинка"
+                                                class="nested-img"
+                                            />
+                                        </ul>
                                     </li>
+                                    <!-- Второй уровень -->
                                     <li class="nav__item nav__item--child">
                                         <a
                                             href="index.html"
                                             class="nav__link--child link-action hover-accent d-flex-between-center gap-2"
-                                            >Техническая поддежка
+                                            >Техническая поддержка
                                             <svg
                                                 class="nav__icon--open icon-open"
                                                 width="20"
@@ -469,7 +514,7 @@
                                                 ></use>
                                             </svg>
                                             <svg
-                                                class="nav__icon--open icon-close"
+                                                class="nav__icon--open icon-close hidden"
                                                 width="20"
                                                 height="20"
                                             >
@@ -478,6 +523,97 @@
                                                 ></use>
                                             </svg>
                                         </a>
+                                        <!-- третий уровень -->
+                                        <ul
+                                            class="nav__list nav__sublist--nested nested-support"
+                                        >
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >Аудит сайта</a
+                                                >
+                                            </li>
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >Хостинг</a
+                                                >
+                                            </li>
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >Он-лайн консультант</a
+                                                >
+                                            </li>
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >Адаптация под мобильные</a
+                                                >
+                                            </li>
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >Безопасный протокол</a
+                                                >
+                                            </li>
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >Закон о персональных<br />данных</a
+                                                >
+                                            </li>
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >Интеграция CRM</a
+                                                >
+                                            </li>
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >Оплата картами на сайте</a
+                                                >
+                                            </li>
+                                            <li
+                                                class="nav__item nav__item--child"
+                                            >
+                                                <a
+                                                    href="index.html"
+                                                    class="nav__link--child link-action hover-accent"
+                                                    >Дизайн и фирменный стиль</a
+                                                >
+                                            </li>
+                                            <img
+                                                src="/assets/images/list-support.png"
+                                                alt="Декоративная картинка"
+                                                class="nested-img support-img"
+                                            />
+                                        </ul>
                                     </li>
                                     <li class="nav__item nav__item--child">
                                         <a
@@ -526,7 +662,7 @@
                                 >
                                 <!-- Второй уровень -->
                                 <ul
-                                    class="nav__list nav__sublist only-level-two"
+                                    class="nav__list nav__sublist level-two-only"
                                 >
                                     <li class="nav__item nav__item--child">
                                         <a
@@ -566,7 +702,7 @@
                                 >
                                 <!-- Второй уровень -->
                                 <ul
-                                    class="nav__list nav__sublist only-level-two"
+                                    class="nav__list nav__sublist level-two-only"
                                 >
                                     <li class="nav__item nav__item--child">
                                         <a
@@ -853,6 +989,7 @@
         <!-- Footer End -->
         <script src="template/lib/swiper/swiper-bundle.min.js"></script>
         <script src="template/js/Mobile-panel.js"></script>
+        <!-- <script src="template/js/UpdateDynamicProperty.js"></script> -->
         <script src="template/js/ToggleSubmenu.js"></script>
         <script src="template/js/main.js"></script>
     </body>
