feat: add services-stats section

--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Dropdown menu -->
             <div class="nav-bar mp__nav-panel mp__nav-panel_main">
                 <div class="container">
                     <nav class="nav">
@@ -271,7 +272,6 @@
                                     class="nav__link link-action text-uppercase hover-accent"
                                     >Услуги и&nbsp;цены</a
                                 >
-
                                 <ul class="nav__list nav__sublist">
                                     <!-- Второй уровень -->
                                     <li class="nav__item nav__item--child">
@@ -611,7 +611,7 @@
                                             <img
                                                 src="/assets/images/list-support.png"
                                                 alt="Декоративная картинка"
-                                                class="nested-img support-img"
+                                                class="nested-img"
                                             />
                                         </ul>
                                     </li>
@@ -647,6 +647,7 @@
                                     </li>
                                 </ul>
                             </li>
+                            <!-- Первый уровень -->
                             <li class="nav__item nav__item--parent">
                                 <a
                                     href="index.html"
@@ -654,6 +655,7 @@
                                     >По&nbsp;типам бизнеса</a
                                 >
                             </li>
+                            <!-- Первый уровень -->
                             <li class="nav__item nav__item--parent">
                                 <a
                                     href="index.html"
@@ -687,6 +689,7 @@
                                     </li>
                                 </ul>
                             </li>
+                            <!-- Первый уровень -->
                             <li class="nav__item nav__item--parent">
                                 <a
                                     href="index.html"
@@ -694,6 +697,7 @@
                                     >Обучение</a
                                 >
                             </li>
+                            <!-- Первый уровень -->
                             <li class="nav__item nav__item--parent">
                                 <a
                                     href="index.html"
@@ -981,6 +985,61 @@
                 </div>
             </section>
             <!-- Slider End -->
+            <!-- Services Stats -->
+            <section class="services-stats mb">
+                <div class="container">
+                    <div
+                        class="services-stats__wrap d-flex-between-center flex-column gap-4"
+                    >
+                        <h4 class="title-tertiary align-items-center">
+                            Нашими услугами уже воспользовались
+                        </h4>
+                        <div class="row justify-content-between w-100">
+                            <div class="col-6 col-md-3 p-0">
+                                <div
+                                    class="d-flex-between-center flex-column gap-5 stats__item"
+                                >
+                                    <p class="fw-600 color-secondary-font">
+                                        Туроператоров
+                                    </p>
+                                    <p class="stats__value">40</p>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-3 p-0">
+                                <div
+                                    class="d-flex-between-center flex-column gap-5 stats__item"
+                                >
+                                    <p class="fw-600 color-secondary-font">
+                                        Турагентств
+                                    </p>
+                                    <p class="stats__value">400</p>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-3 p-0">
+                                <div
+                                    class="d-flex-between-center flex-column gap-5 stats__item"
+                                >
+                                    <p class="fw-600 color-secondary-font">
+                                        Отелей
+                                    </p>
+                                    <p class="stats__value">60</p>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-3 p-0">
+                                <div
+                                    class="d-flex-between-center flex-column gap-5 stats__item"
+                                >
+                                    <p class="fw-600 color-secondary-font">
+                                        Всего
+                                    </p>
+                                    <p class="stats__value">500</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Services Stats END-->
         </main>
         <!-- Main End -->
 
