--- a/index.html
+++ b/index.html
@@ -994,7 +994,9 @@
                         <h4 class="title-tertiary align-items-center">
                             Нашими услугами уже воспользовались
                         </h4>
-                        <div class="row justify-content-between w-100">
+                        <div
+                            class="row justify-content-between w-100 gy-4 wrap-counter"
+                        >
                             <div class="col-6 col-md-3 p-0">
                                 <div
                                     class="d-flex-between-center flex-column gap-5 stats__item"
@@ -1040,6 +1042,111 @@
                 </div>
             </section>
             <!-- Services Stats END-->
+            <!-- About -->
+            <section class="about mb">
+                <div class="container">
+                    <div class="about__top d-flex-between-center mb">
+                        <div class="row g-4 about__content">
+                            <div class="col-12 col-md-5 col-lg-12">
+                                <h2 class="title-primary about__title-primary">
+                                    Web разработка<br />в сфере туризма
+                                </h2>
+                            </div>
+                            <div class="col-12 col-md-7 col-lg-12">
+                                <p class="text-body text-about">
+                                    Фабрика-турсайтов.рф уже более
+                                    15 лет специализируется на разработке
+                                    в туристическом секторе. За это время
+                                    мы разработали свыше 500 решений для отелей,
+                                    санаториев, туроператоров, турагентств,
+                                    сервисов бронирования билетов и турпорталов.
+                                    Запустили свыше 10 000 рекламных кампаний.
+                                </p>
+                            </div>
+                        </div>
+                        <div
+                            class="row justify-content-between w-100 wrap-counter"
+                        >
+                            <div
+                                class="col-6 d-flex-between-center flex-column gap-4 pt-5 pb-4"
+                            >
+                                <p class="value-counter">
+                                    <span class="stats__value value-counter"
+                                        >15</span
+                                    >
+                                    <span class="counter-addon value-counter"
+                                        >лет</span
+                                    >
+                                </p>
+                                <p
+                                    class="text-body color-secondary-font text-counter"
+                                >
+                                    На рынке
+                                </p>
+                            </div>
+                            <div
+                                class="col-6 d-flex-center-center flex-column gap-5 py-4 bg-secondary"
+                            >
+                                <p class="value-counter">
+                                    <span class="stats__value value-counter"
+                                        >500</span
+                                    ><span class="counter-addon counter-plus"
+                                        ><svg
+                                            width="24"
+                                            height="24"
+                                            viewBox="0 0 24 25"
+                                            fill="none"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                fill-rule="evenodd"
+                                                clip-rule="evenodd"
+                                                d="M12 4.5C12.5523 4.5 13 4.94772 13 5.5V19.5C13 20.0523 12.5523 20.5 12 20.5C11.4477 20.5 11 20.0523 11 19.5V5.5C11 4.94772 11.4477 4.5 12 4.5Z"
+                                                fill="#D13A1F"
+                                            />
+                                            <path
+                                                fill-rule="evenodd"
+                                                clip-rule="evenodd"
+                                                d="M4 12.5C4 11.9477 4.44772 11.5 5 11.5H19C19.5523 11.5 20 11.9477 20 12.5C20 13.0523 19.5523 13.5 19 13.5H5C4.44772 13.5 4 13.0523 4 12.5Z"
+                                                fill="#D13A1F"
+                                            />
+                                        </svg>
+                                    </span>
+                                </p>
+                                <p
+                                    class="text-body color-secondary-font text-counter"
+                                >
+                                    Успешных решений
+                                </p>
+                            </div>
+                            <div
+                                class="col-6 d-flex-center-center flex-column gap-4 pt-5 pb-4 bg-secondary"
+                            >
+                                <p class="stats__value value-counter">28</p>
+                                <p
+                                    class="text-body color-secondary-font text-counter"
+                                >
+                                    Человек в команде
+                                </p>
+                            </div>
+                            <div
+                                class="col-6 d-flex-center-center flex-column gap-4 pt-5 pb-4"
+                            >
+                                <p class="stats__value value-counter">1500</p>
+                                <p
+                                    class="text-body color-secondary-font text-counter"
+                                >
+                                    Клиентов из 14 стран
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="about__awards">
+                    <div class="container"></div>
+                </div>
+            </section>
+            <!-- About END-->
         </main>
         <!-- Main End -->
 
