--- a/ui.html
+++ b/ui.html
@@ -1,99 +1,105 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UI Библиотека</title>
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="stylesheet" href="template/css/reset.css">
-  <link rel="stylesheet" href="template/css/bootstrap-grid.css">
-  <link rel="stylesheet" href="template/lib/swiper/swiper-bundle.css">
-  <link rel="stylesheet" href="template/css/ui.css">
-  <link rel="stylesheet" href="template/css/utility.css">
-  <link rel="stylesheet" href="template/css/mobile-panel.css" media="all">
-  <link rel="stylesheet" href="template/css/common.css">
-  <link rel="stylesheet" href="template/css/slider.css">
-</head>
-<body>
-  <svg width="0" height="0" class="visually-hidden">
-    <symbol xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 32 32" id="icon-whatsapp">
-      <rect width="32" height="32" rx="16"></rect>
-      <path fill="currentColor" d="M22.341 9.65A8.343 8.343 0 0 0 16.43 7.2c-4.624 0-8.37 3.733-8.37 8.342 0 1.458.41 2.916 1.112 4.141L8 24l4.449-1.167a8.558 8.558 0 0 0 3.98.992c4.625 0 8.371-3.733 8.371-8.342-.059-2.158-.878-4.258-2.459-5.833Zm-1.873 8.867c-.175.466-.995.933-1.405.991a3.28 3.28 0 0 1-1.287-.058c-.293-.117-.703-.233-1.171-.467-2.107-.875-3.454-2.975-3.57-3.15-.118-.116-.879-1.108-.879-2.158 0-1.05.527-1.517.702-1.75.176-.233.41-.233.586-.233h.41c.117 0 .292-.059.468.35.176.408.585 1.458.644 1.516a.37.37 0 0 1 0 .35c-.059.117-.117.234-.234.35-.117.117-.234.292-.293.35-.117.117-.234.234-.117.409.117.233.527.875 1.17 1.458.82.7 1.464.933 1.698 1.05.234.117.351.058.468-.058.118-.117.527-.584.644-.817.117-.233.293-.175.469-.117.175.059 1.229.584 1.405.7.234.117.35.175.41.234.058.175.058.583-.118 1.05Z"></path>
-    </symbol>
-    <symbol xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 32 32" id="icon-telegram">
-      <rect width="32" height="32" rx="16"></rect>
-      <path fill="currentColor" d="m22.4 10.082-2.404 12.552s-.337.87-1.26.453l-5.548-4.405-.026-.013c.75-.697 6.56-6.107 6.814-6.352.393-.38.15-.606-.307-.32l-8.583 5.645-3.312-1.153s-.52-.192-.57-.61c-.052-.418.587-.644.587-.644l13.5-5.484s1.11-.505 1.11.33Z"></path>
-    </symbol>
-    <symbol xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 42 42" id="icon-phone">
-      <rect width="42" height="42" rx="21"></rect>
-      <path fill="currentColor" d="M11 25.956v3a2 2 0 0 0 2.18 2 19.791 19.791 0 0 0 8.63-3.07 19.502 19.502 0 0 0 6-6 19.791 19.791 0 0 0 3.07-8.67 2.002 2.002 0 0 0-1.99-2.18h-3a2 2 0 0 0-2 1.72c-.126.96-.36 1.903-.7 2.81a2 2 0 0 0 .45 2.11l1.27 1.27a16.001 16.001 0 0 1-6 6l-1.27-1.27a2 2 0 0 0-2.11-.45c-.907.338-1.85.573-2.81.7a2 2 0 0 0-1.72 2.03Z"></path>
-    </symbol>
-    <symbol xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 32 32" id="icon-arrow">
-      <path fill="currentColor" d="M4.05 15h21.59l-5.3-5.29a1.004 1.004 0 1 1 1.42-1.42l7 7a1 1 0 0 1 .19.3.3.3 0 0 1 0 .1c.027.08.044.165.05.25V16a.85.85 0 0 1-.06.31.85.85 0 0 1-.19.3l-7 7a1.002 1.002 0 0 1-1.639-.325 1 1 0 0 1 .219-1.095L25.64 17H4.05a1 1 0 0 1 0-2Z"></path>
-    </symbol>
-  </svg>
-
-  <header class="mb-4">
-    <div class="container">
-      <h1 class="title-primary py-3">UI Библиотека компонентов</h1>
-    </div>
-  </header>
-  <section class="mb-4">
-    <div class="container">
-      <h2 class="mb-3">Кнопки</h2>
-      <div class="d-flex align-items-center gap-2 mb-2">
-        <button class="btn btn-primary">Primary Button</button>
-        <span>.btn .btn-primary</span>
-      </div>
-      <div class="d-flex align-items-center gap-2 mb-2">
-        <button class="btn btn-icon">
-          <svg class="icon" width="24" height="24"><use xlink:href="#icon-phone"></use></svg>
-        </button>
-        <span>.btn .btn-icon</span>
-      </div>
-      <div class="d-flex align-items-center gap-2 mb-2">
-        <button class="btn btn-secondary">Secondary Button</button>
-        <span>.btn .btn-secondary</span>
-      </div>
-    </div>
-  </section>
-  <section class="mb-4">
-    <div class="container">
-      <h2 class="mb-3">Ссылки</h2>
-      <div class="d-flex align-items-center gap-2 mb-2">
-        <a href="#" class="link-action hover-accent">Link Action</a>
-        <span>.link-action .hover-acent</span>
-      </div>
-    </div>
-  </section>
-  <section class="mb-4">
-    <div class="container">
-      <h2 class="mb-3">Иконки</h2>
-      <div class="d-flex align-items-center gap-2 mb-2">
-        <a class="icon-link icon-social icon-social--telegram">
-          <svg class="icon" width="32" height="32"><use xlink:href="#icon-telegram"></use></svg>
-        </a>
-        <span>.icon-link .icon-social .icon-social--telegram</span>
-      </div>
-      <div class="d-flex align-items-center gap-2 mb-2">
-        <a class="icon-link icon-social icon-social--whatsapp">
-          <svg class="icon" width="32" height="32"><use xlink:href="#icon-whatsapp"></use></svg>
-        </a>
-        <span>.icon-link .icon-social .icon-social--whatsapp</span>
-      </div>
-    </div>
-  </section>
-  <section class="mb-4">
-    <div class="container">
-      <h2 class="mb-3">Анимация</h2>
-      <div class="d-flex align-items-center gap-2 mb-2">
-        <button class="btn btn-icon" title="Call" style="width: 50px; height: 50px;">
-          <svg class="icon" width="32" height="32"><use xlink:href="#icon-phone"></use></svg>
-        </button>
-        <span>.btn .btn-icon</span>
-      </div>
-    </div>
-  </section>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>UI Библиотека</title>
+        <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+        <link rel="shortcut icon" href="/favicon.ico" />
+        <link rel="stylesheet" href="template/css/reset.css" />
+        <link rel="stylesheet" href="template/css/bootstrap-grid.css" />
+        <link rel="stylesheet" href="template/lib/swiper/swiper-bundle.css" />
+        <link rel="stylesheet" href="template/css/ui.css" />
+        <link rel="stylesheet" href="template/css/utility.css" />
+        <link
+            rel="stylesheet"
+            href="template/css/mobile-panel.css"
+            media="all"
+        />
+        <link rel="stylesheet" href="template/css/common.css" />
+        <link rel="stylesheet" href="template/css/slider.css" />
+    </head>
+    <body>
+        <header class="mb-4">
+            <div class="container">
+                <h1 class="title-primary py-3">UI Библиотека компонентов</h1>
+            </div>
+        </header>
+        <section class="mb-4">
+            <div class="container">
+                <h2 class="mb-3">Кнопки</h2>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <button class="btn btn-primary">Primary Button</button>
+                    <span>.btn .btn-primary</span>
+                </div>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <button class="btn btn-icon">
+                        <svg class="icon" width="24" height="24">
+                            <use
+                                href="/assets/icons/sprite.svg#icon-phone"
+                            ></use>
+                        </svg>
+                    </button>
+                    <span>.btn .btn-icon</span>
+                </div>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <button class="btn btn-secondary">Secondary Button</button>
+                    <span>.btn .btn-secondary</span>
+                </div>
+            </div>
+        </section>
+        <section class="mb-4">
+            <div class="container">
+                <h2 class="mb-3">Ссылки</h2>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <a href="#" class="link-action hover-accent">Link Action</a>
+                    <span>.link-action .hover-acent</span>
+                </div>
+            </div>
+        </section>
+        <section class="mb-4">
+            <div class="container">
+                <h2 class="mb-3">Иконки</h2>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <a class="icon-link icon-social icon-social--telegram">
+                        <svg class="icon" width="32" height="32">
+                            <use
+                                href="/assets/icons/sprite.svg#icon-telegram"
+                            ></use>
+                        </svg>
+                    </a>
+                    <span>.icon-link .icon-social .icon-social--telegram</span>
+                </div>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <a class="icon-link icon-social icon-social--whatsapp">
+                        <svg class="icon" width="32" height="32">
+                            <use
+                                href="/assets/icons/sprite.svg#icon-whatsapp"
+                            ></use>
+                        </svg>
+                    </a>
+                    <span>.icon-link .icon-social .icon-social--whatsapp</span>
+                </div>
+            </div>
+        </section>
+        <section class="mb-4">
+            <div class="container">
+                <h2 class="mb-3">Анимация</h2>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <button
+                        class="btn btn-icon"
+                        title="Call"
+                        style="width: 50px; height: 50px"
+                    >
+                        <svg class="icon" width="32" height="32">
+                            <use
+                                href="/assets/icons/sprite.svg#icon-phone"
+                            ></use>
+                        </svg>
+                    </button>
+                    <span>.btn .btn-icon</span>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
